quicklinks sass.textbox overlapping megamenu fix

--- a/web/themes/custom/myusf/sass/src/main.scss
+++ b/web/themes/custom/myusf/sass/src/main.scss
@@ -152,7 +152,7 @@ main#content {
 }
 
 .col {
-	padding-right: 0;
+	//padding-right: 0;
 
 	@include media-breakpoint-only(tablet) {
 		max-width: 70%;
