--- a/web/themes/custom/myusf/sass/src/partials/_forms.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_forms.scss
@@ -19,6 +19,10 @@ form {
 		font-size: .9rem;
 	    border-radius: 0;
 		margin-bottom: 0.5rem;
+
+		&:focus {
+			z-index:1;
+		}
 	}
 	.form-actions {
 		margin-top: 20px;
@@ -232,12 +236,3 @@ li.entitywebformsettings {
   display: none;
 }
 
-
-/* USER LOGIN (fix for overlapping with megameu)
-================================================ */
-
-.user-login-form {
-	.form-control:focus {
-		z-index: 1;
-	}
-}
